# improving-spy

./: .gitignore  README.md  generate_openapi_yaml.py  main.py  openapi.txt  openapi.yaml  pyproject.toml  run_cli.py
.cursor/rules/: ai-agent-patterns.mdc  coding-standards.mdc  development-workflow.mdc  frontend-textual-patterns.mdc  implement.mdc  project-structure.mdc  pydantic_ai_api_v0.7.2.mdc
.windsurf/rules/: ai-agent-patterns.md  coding-standards.md  development-workflow.md  documentation-structure.md  frontend-textual-patterns.md  implement.md  project-structure.md  pydantic_ai_api_v0.7.2.md
lesson-plans/: week1_slides.md  week2_slides.html  week2_slides.md  week3_lesson_plan.md  week3_slides.md
missions/: paris.txt
requests/: 01-setup-agent.http  02-chat-basic.http  03-conversation-setup.http  04-conversation-chat.http  05-tool-calling.http  06-cleanup.http  agent_crud.http  delete.http  get.http  get_by_codename.http  getall.http  post.http  update.http
src/: agent.py  agent_new.py  database.py  main.py  models.py  websocket_manager.py
src/api/: routes.py
src/backend/api/: routes.py
src/backend/core/: database.py
src/backend/models/: __init__.py  messages.py
src/backend/repositories/: conversation_repository.py  spy_repository.py
src/client/: README-frontend.md  README.md  api_client.py  app.py  config.py  history_manager.py  models.py  requirements.txt  spy_cli.py  widgets.py
src/repositories/: conversation_repository.py  spy_repository.py
src/tools/: mission_tools.py
tests/client/: __init__.py  test_spy_cli.py  test_widgets.py
(+10 files in other folders)
